TinyPedal (WIP)
-----------------------------
* Engine widget
    - [New]Added horizontal layout.
    - [New]Added "turbo_pressure_unit" option (bar, psi, kPa) in JSON, default is bar.
    - [New]Each info font & background color can be customized in JSON.
    - [New]Each info display order can be customized via "column_index" in JSON.

* Force widget
    - [New]Added horizontal layout.

* Fuel widget
    - [New]Added "low_fuel_lap_threshold" option in JSON.

* Pressure widget
    - Reworked layouts (vertical & horizontal).
    - [New]Each info display order can be customized via "column_index" in JSON.

* Relative Widget
    - Removed brackets from combined driver name if name is empty.

* Sectors Widget
    - Removed unnecessary "show_best_sector_time" option,
      always shows each best sector time if available.

* Timing Widget
    - [New]Show current session best laptime from all players,
      with additional option to show laptime from same vehicle class only (default ON).
    - [New]Personal best, last, estimated laptime display can be individually hide in JSON.
    - [New]Each info prefix text can be customized or hide in JSON.
    - [New]Each info display order can be customized via "column_index" in JSON.
    - Removed double lines horizontal layout.

* Core
    - Auto sorts all options in JSON file according to default setting template
      for better readability and consistency.
    - Optimized GUI update methods for widgets:
      Cruise, Deltabest, DRS, Engine, Force, Fuel, Pressure, Sectors, Session, Timing.
    - Use Linux XDG directories for storing user data (by Bernat).
    - Add Linux instructions to README.md (by Bernat).

* Misc
    - Updated customization guide with new configurable options for each widget.

TinyPedal 1.10.3 (2023-01-31)
-----------------------------
* Relative Widget
    - [New]Implemented lazy GUI update method that reduces Relative Widget CPU usage by 80% more.