@@ -118,6 +118,7 @@ class Setting:
             "position_y": "526",
             "opacity": 0.9,
             "layout": "0",
+            "temp_unit": "0",
             "font_name": "consolas",
             "font_size": 15,
             "font_weight": "bold",
@@ -572,9 +573,9 @@ class Setting:
             "warning_threshold_remaining": 30,
             "warning_threshold_wear": 3,
             "warning_threshold_laps": 5,
-            "column_index_remaining": 0,
-            "column_index_last_wear": 1,
-            "column_index_lifespan": 2,
+            "column_index_remaining": 1,
+            "column_index_last_wear": 2,
+            "column_index_lifespan": 3,
         },
         "weather": {
             "enable": True,
@@ -587,8 +588,15 @@ class Setting:
             "font_size": 15,
             "font_weight": "bold",
             "bar_gap": 2,
-            "font_color": "#FFFFFF",
-            "bkg_color": "#222222",
+            "font_color_temperature": "#FFFFFF",
+            "bkg_color_temperature": "#222222",
+            "font_color_rain": "#FFFFFF",
+            "bkg_color_rain": "#222222",
+            "font_color_wetness": "#FFFFFF",
+            "bkg_color_wetness": "#222222",
+            "column_index_temperature": 1,
+            "column_index_rain": 2,
+            "column_index_wetness": 3,
         },
         "wheel": {
             "enable": True,
