@@ -5,6 +5,7 @@ TinyPedal (WIP)
     - [New]Added "turbo_pressure_unit" option (bar, psi, kPa) in JSON, default is bar.
     - [New]Each info font & background color can be customized in JSON.
     - [New]Each info display order can be customized via "column_index" in JSON.
+    - [New]Added Fahrenheit unit for temperature display via "temp_unit" in JSON.
 
 * Force widget
     - [New]Added horizontal layout.
@@ -13,8 +14,9 @@ TinyPedal (WIP)
     - [New]Added "low_fuel_lap_threshold" option in JSON.
 
 * Pressure widget
-    - Reworked layouts (vertical & horizontal).
     - [New]Each info display order can be customized via "column_index" in JSON.
+    - Tyre load ratio is now calculated against sum of all wheels load.
+    - Reworked layouts (vertical & horizontal).
 
 * Relative Widget
     - Removed brackets from combined driver name if name is empty.
@@ -31,11 +33,16 @@ TinyPedal (WIP)
     - [New]Each info display order can be customized via "column_index" in JSON.
     - Removed double lines horizontal layout.
 
+* Weather widget
+    - [New]Each info display order can be customized via "column_index" in JSON.
+    - [New]Each info font & background color can be customized in JSON.
+    - Moved "Dry/Wet" label to wetness bar.
+
 * Core
     - Auto sorts all options in JSON file according to default setting template
       for better readability and consistency.
     - Optimized GUI update methods for widgets:
-      Cruise, Deltabest, DRS, Engine, Force, Fuel, Pressure, Sectors, Session, Timing.
+      Cruise, Deltabest, DRS, Engine, Force, Fuel, Pressure, Sectors, Session, Timing, Weather.
     - Use Linux XDG directories for storing user data (by Bernat).
     - Add Linux instructions to README.md (by Bernat).
 
